--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "private": false,
+  "displayName": "Homebridge Cleanmate",
+  "name": "homebridge-cleanmate",
   "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "description": "Adds homekit-support to your cleanmate vacuum cleaner.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git://github.com/albinmedoc/homebridge-cleanmate.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/albinmedoc/homebridge-cleanmate/issues"
   },
   "engines": {
     "node": ">=14.18.1",
@@ -26,7 +26,6 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
