--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "displayName": "Homebridge Cleanmate",
   "name": "homebridge-cleanmate",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "description": "Adds homekit-support to your cleanmate vacuum cleaner.",
   "license": "Apache-2.0",
   "repository": {
