Tests running in bash

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Run tests
         run: npm run test -- --coverage
+        shell: bash
 
       - name: Build the project
         run: npm run build
