--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,9 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm run test -- --coverage
-        shell: bash
+        run: npm run test
 
       - name: Build the project
         run: npm run build
         env:
           CI: true
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
