--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "homebridge": "^1.3.5",
+    "husky": "^8.0.0",
     "jest": "^29.1.2",
     "nodemon": "^2.0.13",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.3.0",
-    "typescript": "^4.8.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "cleanmate": "^1.1.0"
   }
 }
